chandeliers-lus/tests/compile_fail/ui/tc/main-sig.stderr
error: Node has an incompatible signature to be marked as executable (required due to annotation #[main])
 --> tests/compile_fail/ui/tc/main-sig.rs:4:5
  |
4 | /     node main() returns (i: int);
5 | |     let i = 0; tel;
  | |__________________^
  |
note: Outputs should be ()
 --> tests/compile_fail/ui/tc/main-sig.rs:4:26
  |
4 |     node main() returns (i: int);
  |                          ^^^^^^^

error: Node has an incompatible signature to be marked as executable (required due to annotation #[test])
  --> tests/compile_fail/ui/tc/main-sig.rs:10:5
   |
10 | /     node test(i: int) returns (b: bool);
11 | |     let b = (i = 0); tel;
   | |________________________^
   |
note: Inputs should be ()
  --> tests/compile_fail/ui/tc/main-sig.rs:10:15
   |
10 |     node test(i: int) returns (b: bool);
   |               ^^^^^^^
note: Outputs should be ()
  --> tests/compile_fail/ui/tc/main-sig.rs:10:32
   |
10 |     node test(i: int) returns (b: bool);
   |                                ^^^^^^^^
